# OOP_Laba_07

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: arena.h  combat_visitor.h  console_observer.h  factory.h  file_observer.h  game.h  game_config.h  npc.h  ork.h  output.h  visitor.h  werewolf.h  willian.h
src/: arena.cpp  combat_visitor.cpp  factory.cpp  game.cpp  npc.cpp  ork.cpp  werewolf.cpp  willian.cpp
tests/: tests.cpp
